Add activity table to ui
This table shows the result of the pg_stat_activities index endpoint. So
the ui now displays all of the activity on the database. It needs to CSS
help, but for now at least it is being displayed.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,9 +1,8 @@
 <%= javascript_pack_tag 'hello_vue' %>
 <%= stylesheet_pack_tag 'hello_vue' %>
 
-<h1>Rails & Vue.js App</h1>
+<h1>PG Scanner Sweep</h1>
 
-<div id='hello'>
-  {{message}}
-  <app></app>
+<div id='pg_activity'>
+  <activity-table></activity-table>
 </div>
